# IDS_camera_stream

./: CMakeLists.txt  README.md  main.cpp
